# happymimi_robot

./: README.md  package.xml
happymimi/: package.xml
happymimi_bringup/: CMakeLists.txt  README.md  package.xml
happymimi_bringup/config/: 33-happymimi-g2.rules  localization_param.yaml  mimi_motor.yaml
happymimi_bringup/launch/: \  display_robot.launch  gmon.out  happymimi_minimal.launch  minimal.launch  sensor.launch  sensors.launch
happymimi_bringup/launch/include/: megarover.launch.xml  robot.launch.xml
happymimi_bringup/launch/include/sensor/: 2dlidar.launch  motor_setup.launch  respeaker.launch
happymimi_bringup/launch/includes/: megarover.launch.xml  robot.launch.xml
happymimi_bringup/launch/includes/sensor/: 2dlidar.launch  respeaker.launch
happymimi_bringup/launch/includes/sensors/: 2dlidar.launch
happymimi_bringup/src/: pub_odom.cpp
happymimi_description/: CMakeLists.txt  package.xml
happymimi_description/meshes/stl/: gen2_body.stl
happymimi_description/robots/: happymimi.urdf  happymimi.urdf.xacro
happymimi_description/urdf/body/: body.urdf.xacro
happymimi_msgs/: CMakeLists.txt  README.md
happymimi_params/: CMakeLists.txt  README.md  locationtmp_human_location.yaml  package.xml
happymimi_params/location/: 0901.yaml  23rcj_mapin_range.yaml  23rcj_yumeko_nakao.yaml  24_yumeko.yaml  Leb_map_2.yaml  Leb_map_nc.yaml  Leb_new_map.yaml  kit_fes_23.yaml  mmmmm.yaml  nakao_23.yaml  pra1.yaml  pra2.yaml  rcap_2021_map.yaml  rcap_2021_map_range.yaml  rcj_2022_map.yaml  rcj_2022_test_map.yaml  rcj_2022_yumeko.yaml  rcj_2022_yumeko1.yaml  rcj_2022_yumeko2_final.yaml  rcj_2023_yumeko_taniguchi.yaml  receptionist.yaml  receptionist2.yaml  receptionist2_range.yaml  test.yaml  test1.yaml  tmp_human_location.yaml  wh_2023.yaml  wh_2023_edu.yaml  yumeko_boos_1.yaml
happymimi_params/param/location/: 0825.yaml  0831.yaml  0901.yaml  0914.yaml  a.yaml  demo_0713.yaml  demo_0716.yaml  demo_3.yaml  exit.yaml  first_demo.yaml  rcap_test_1.yaml  training_area.yaml
happymimi_robot/: CMakeLists.txt  package.xml
happymimi_teleop/: CMakeLists.txt  package.xml
happymimi_teleop/launch/: joycon_teleop.launch
happymimi_teleop/src/: joycon.cpp
