<?xml version="1.0"?>
<package format="2">
  <name>happymimi_robot</name>
  <version>0.0.0</version>
  <description>The happymimi_robot package</description>
  <maintainer email="issei@todo.todo">issei</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <metapackage/>
  </export>
</package>
